tests/passes/well-formed/main-ref-cell.expect
---STDERR---
Error: tests/passes/well-formed/main-ref-cell.futil
8 |    ref m = std_const(2,1);
  |    ^^^^^^^^^^^^^^^^^^^^^^ Malformed Structure: constant not allowed for ref cells
